Wrong margin, fix to margin bottom

--- a/css/style.scss
+++ b/css/style.scss
@@ -37,7 +37,7 @@ img {
 }
 
 .uk-footer-content {
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .uk-cover-background {
